--- a/backend/ormconfig.json
+++ b/backend/ormconfig.json
@@ -7,8 +7,8 @@
   "database": "Test",
   "synchronize": true,
   "logging": true,
-  "entities": ["dist/src/entities/**/*.js"],
-  "migrations": ["dist/src/migrations/**/*.js"],
+  "entities": ["dist/entities/**/*.js"],
+  "migrations": ["dist/migrations/**/*.js"],
   "cli": {
     "entitiesDir": "src/entities",
     "migrationsDir": "src/migrations"
